# android-gallery2

./: build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jni_egl/: CMakeLists.txt
app/src/main/cpp/jni_filters/: CMakeLists.txt
app/src/main/cpp/jni_filters/src/: bwfilter.c  fx.c  vignette.c
app/src/main/cpp/jni_mosaic/: CMakeLists.txt
app/src/main/cpp/jni_mosaic/feature_mos/src/mosaic/: AlignFeatures.h  Blend.h
app/src/main/cpp/jni_mosaic/feature_mos/src/mosaic_renderer/: SurfaceTextureRenderer.cpp
app/src/main/java/com/android/camera/: CameraSettings.java  PanoramaModule.java  Util.java  VideoModule.java
app/src/main/java/com/android/camera/ui/: PieRenderer.java
app/src/main/java/com/android/gallery3d/app/: AlbumPage.java  EyePosition.java  PhotoPage.java
app/src/main/java/com/android/gallery3d/data/: DecodeUtils.java  LocationClustering.java
app/src/main/java/com/android/gallery3d/filtershow/: FilterShowActivity.java
app/src/main/java/com/android/gallery3d/filtershow/cache/: FilteringPipeline.java
app/src/main/java/com/android/gallery3d/filtershow/category/: CategoryPanel.java  MainPanel.java
app/src/main/java/com/android/gallery3d/filtershow/editors/: EditorPanel.java
app/src/main/java/com/android/gallery3d/filtershow/filters/: IconUtilities.java  ImageFilterFx.java  ImageFilterRS.java  ImageFilterSharpen.java
app/src/main/java/com/android/gallery3d/filtershow/presets/: FilterEnvironment.java  ImagePreset.java
app/src/main/java/com/android/gallery3d/filtershow/state/: StatePanel.java
app/src/main/java/com/android/gallery3d/glrenderer/: BitmapTexture.java  GLES11Canvas.java  GLPaint.java  ResourceTexture.java  StringTexture.java  UploadedTexture.java
app/src/main/java/com/android/gallery3d/ingest/: IngestActivity.java  IngestService.java
app/src/main/java/com/android/gallery3d/ingest/adapter/: MtpPagerAdapter.java
app/src/main/java/com/android/gallery3d/ui/: Paper.java  PhotoView.java  SlotView.java  TileImageView.java
app/src/main/java/com/android/gallery3d/util/: AccessibilityUtils.java  MotionEventHelper.java
app/src/main/java/com/android/gallery3d/util/util/: AccessibilityUtils.java  BucketNames.java  CacheManager.java  GalleryUtils.java  HelpUtils.java  Holder.java  IdentityCache.java  IntArray.java  InterruptableOutputStream.java  JobLimiter.java  LinkedNode.java  (+15 more)
app/src/main/java/com/android/photos/: GalleryActivity.java
app/src/main/java/com/android/photos/views/: GalleryThumbnailView.java  TiledImageRenderer.java
app/src/main/res/layout/: filtershow_activity.xml  filtershow_category_panel_new.xml  filtershow_main_panel.xml  filtershow_state_panel_new.xml
app/src/main/res/layout-land/: filtershow_main_panel.xml  filtershow_state_panel_new.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-af/: strings.xml
app/src/main/res/values-am/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-en-rGB/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-es-rUS/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-lt/: strings.xml
app/src/main/res/values-lv/: strings.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/values-nb/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rPT/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sk/: strings.xml
app/src/main/res/values-sl/: strings.xml
app/src/main/res/values-sr/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-sw/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tl/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/values-zu/: strings.xml
app/src/main/res/xml/: camera_preferences.xml  video_preferences.xml
